--- a/employee.yaml
+++ b/employee.yaml
@@ -7,7 +7,7 @@ Employee:
     Title: Yazılım Test Mühendisi
     DateOfBirth: 30.09.1994 00:00:00
     Address: Üniversiteler Mah. 1606. Cad. Bilkent
-    Town: Çamkaya
+    Town: Çankaya
     City: Ankara
     Country: Türkiye
     PhoneNumber: 5066660099
@@ -21,7 +21,7 @@ Employee:
     Title: Genel Müdür
     DateOfBirth: 20.10.1967 00:00:00
     Address: Üniversiteler Mah. 1606. Cad. Bilkent
-    Town: Çamkaya
+    Town: Çankaya
     City: Ankara
     Country: Türkiye
     PhoneNumber: 5076660099
