--- a/employee.yaml
+++ b/employee.yaml
@@ -5,25 +5,25 @@ Employee:
     Name: Şeyma
     Surname: Deveci
     Title: Yazılım Test Mühendisi
-    DateOfBirth: 30.09.1994 00:00:00
+    DateOfBirth: 30-09-1994 00:00:00
     Address: Üniversiteler Mah. 1606. Cad. Bilkent
     Town: Çankaya
     City: Ankara
     Country: Türkiye
     PhoneNumber: 5066660099
     Email: seyma.devop@gmail.com
-    DateOfStart: 01.01.2012 00:00:00
+    DateOfStart: 01-01-2012 00:00:00
 
   - No: 2
     EmployeeId: 2
     Name: Mehmet
     Surname: Güven
     Title: Genel Müdür
-    DateOfBirth: 20.10.1967 00:00:00
+    DateOfBirth: 20-10-1967 00:00:00
     Address: Üniversiteler Mah. 1606. Cad. Bilkent
     Town: Çankaya
     City: Ankara
     Country: Türkiye
     PhoneNumber: 5076660099
     Email: deneme@gmail.com
-    DateOfStart: 01.01.1989 00:00:00
+    DateOfStart: 01-01-1989 00:00:00
